# studies

./: .gitignore  pyproject.toml
deep_learning/encoders/: dataloader.py  layers.py  model.py  train.py
deep_learning/encoders/conf/: config.yaml
deep_learning/encoders/conf/architecture/: model_v1.yaml
deep_learning/encoders/conf/train/: simsum.yaml
deep_learning/fine_tuning_BERT/: preprocess.py  train_model.py
deep_learning/handwritten_digit_classification/: evaluate_model.py  nn.py  preprocess.py  train_model.py
